Bug 268503 - Some themes cause chat handler crash.
Summary: Some themes cause chat handler crash.
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-14 19:53 UTC by David Edmundson
Modified: 2012-07-06 12:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (1.26 KB, text/plain)
2011-03-14 19:59 UTC, Alin M Elena
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2011-03-14 19:53:25 UTC
Version:           unspecified
OS:                Linux

Crash when using http://adiumxtras.com/index.php?a=xtras&xtra_id=1907

Not checked.




Reproducible: Didn't try
Comment 1 Alin M Elena 2011-03-14 19:59:47 UTC
Created attachment 57997 [details]
New crash information added by DrKonqi

telepathy-chat-config (0.1) on KDE Platform 4.6.41 (4.7 >= 20110106) "release 1" using Qt 4.7.2

the backtrace for the crash

-- Backtrace (Reduced):
#7  0x00007f82a1d4da2d in QString::arg(QString const&, int, QChar const&) const () from /usr/lib64/libQtCore.so.4
#8  0x00007f82a2148254 in AdiumThemeView::AdiumThemeView (this=0x6c10e0, parent=<optimized out>) at /usr/src/debug/telepathy-chat-handler-0.0git.1300011536/lib/adium-theme-view.cpp:72
#9  0x0000000000406d49 in Ui_ChatWindowConfig::setupUi (this=0x77e9c0, ChatWindowConfig=0x7fffa8b648a0) at /usr/include/QtCore/qstring.h:883
#10 0x0000000000405a9a in MainWindow::MainWindow (this=0x7fffa8b648a0, parent=<optimized out>) at /usr/src/debug/telepathy-chat-handler-0.0git.1300011536/config/main-window.cpp:35
#11 0x00000000004059e6 in main (argc=1, argv=0x7fffa8b64ac8) at /usr/src/debug/telepathy-chat-handler-0.0git.1300011536/config/main.cpp:39
Comment 2 Florian Reinhard 2011-03-16 15:48:38 UTC
Git commit 74c31e4ca14e22e43f148b95c8ac7d98f37ec431 by Florian Reinhard.
Committed on 16/03/2011 at 02:04.
Pushed by reinhard into branch 'master'.

Don't crash when there's a chatStyle with no variants.

REVIEW: 100870
BUG: 268503

M  +4    -3    lib/adium-theme-view.cpp     

http://commits.kde.org/telepathy-chat-handler/74c31e4ca14e22e43f148b95c8ac7d98f37ec431