Don't crash when there's a chatStyle with no variants.

REVIEW: 100870
BUG: 268503